[gd_scene load_steps=7 format=3 uid="uid://b5x0hxo5a6v5y"]

[ext_resource type="Script" path="res://Scripts/node_2d.gd" id="1_0gq5e"]
[ext_resource type="Script" path="res://Scripts/TesteAnzol.gd" id="2_r3alg"]
[ext_resource type="Texture2D" uid="uid://c3fric83g0um4" path="res://Arts/Anzol_ilustras.png" id="3_0y543"]
[ext_resource type="Texture2D" uid="uid://cfpcppi4shl32" path="res://Arts/Textura_Corda.jpeg" id="4_vf5un"]

[sub_resource type="GDScript" id="GDScript_mmo1j"]
script/source = "extends Marker2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_540df"]
radius = 140.0
height = 472.0

[node name="Anzol" type="Node2D"]
script = ExtResource("1_0gq5e")

[node name="EndFishingRod" type="Marker2D" parent="."]
position = Vector2(400, 227)

[node name="Hook" type="Marker2D" parent="."]
position = Vector2(415, 553)
script = SubResource("GDScript_mmo1j")

[node name="HookSprite" type="Area2D" parent="."]
position = Vector2(0, 600)
scale = Vector2(0.25, 0.25)
script = ExtResource("2_r3alg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HookSprite"]
rotation = 3.14159
shape = SubResource("CapsuleShape2D_540df")

[node name="Sprite2D" type="Sprite2D" parent="HookSprite"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0y543")

[node name="InicioAnzol" type="Marker2D" parent="HookSprite"]
position = Vector2(0, -330)

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 0)
width = 7.0
texture = ExtResource("4_vf5un")
texture_mode = 1

[connection signal="area_entered" from="HookSprite" to="HookSprite" method="_on_area_entered"]
[connection signal="body_entered" from="HookSprite" to="HookSprite" method="_on_body_entered"]
[connection signal="hit" from="HookSprite" to="." method="_on_hook_sprite_hit"]
